--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
@@ -475,9 +475,7 @@
         "#si-favorite\n",
         "import re\n",
         "\n",
-        "input_string = \"My favorite number is 8\"  # an example of possible input\n",
-        "\n",
-        "hasNumber = bool(re.search(r'(?<!\\d)\\d(?!\\d)', input_string))\n"
+        "hasNumber = re.search(r'\\d', input_string)\n"
       ]
     },
     {
