--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
@@ -475,7 +475,7 @@
         "#si-favorite\n",
         "import re\n",
         "\n",
-        "hasNumber = re.search(r'\\d', input_string)\n"
+        "hasNumber = re.search(r'(?<!\\d)\\d(?!\\d)', input_string)"
       ]
     },
     {
